# micromorph

./: .gitignore  Dockerfile  Makefile  README.md  micromorph.py  new_tools.py  pyproject.toml  tools.py
skills/: __init__.py  core.py  fs.py  swarm.py
tests/: test_python_exec.py
