[project]
name = "micromorph"
version = "0.1.0"
description = "Polymorhic AI agent"
authors = [
    {name = "Vitalii [Nayjest] Stepanenko",email = "mail@vitaliy.in"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ai-microcore>=5.2,<6",
    "anthropic",
    "google-genai",
    "pyyaml",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
packages = [
    { include = "micromorph" },
]
[tool.poetry.scripts]
mm = "micromorph:main"
