[project]
name = "micromorph"
version = "0.1.0"
description = "Polymorhic AI"
authors = [
    {name = "Vitalii [Nayjest] Stepanenko",email = "mail@vitaliy.in"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "ai-microcore>=5.3,<6",
    "anthropic",
    "google-genai",
    "pyyaml",
]

[project.scripts]
mm = "micromorph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]